--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,6 +10,7 @@
   The world is your oyster.
   <p>
     <a></a>
+    //git
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
 </ion-content>
