--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,6 +11,6 @@
   <p>
     <a></a>
     //git
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    If you fd get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
 </ion-content>
